[package]
name = "mkproj_books"
version = "0.1.0"
authors = ["Mustafif <mustafif0929@gmail.com>"]
edition = "2018"
repository = "https://github.com/MKProj/MKProject_Books-CLI"
license = "GPLv2"
description = "Download MKProject Books directly via Commandline"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde={version="1.0", features=["derive"]}
structopt = "0.3"
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }